# fastcall-benchmarks

./: .gitignore  CMakeLists.txt  README.md  main.cc
benchmark/: CMakeLists.txt  README.md  fccmp_fixture.h  fccmp_fixture.hpp  fce_fixture.h  fce_fixture.hpp  invocation.S  main.cc  yce_fixture.hpp
cycles/: CMakeLists.txt  README.md  generic.hpp  main.cc  x86.hpp
include/: compiler.hpp  fastcall.h  fastcall.hpp  fccmp.hpp  options.hpp  os.hpp  perf.hpp  ycall.hpp
misc/: CMakeLists.txt  README.md  controller.h  controller.hpp  fce.h  fce.hpp  main.cc  yce.hpp
src/: config.h.in  fastcall.h  fccmp.h  fccmp_fixture.h  fce_fixture.h  fixtures.h  main.cc  parse_vdso.c
syscall/: CMakeLists.txt  README.md  arm64.cc  main.cc  syscall.hpp  x86.cc
